--- a/src/styles/editorial-image-list.scss
+++ b/src/styles/editorial-image-list.scss
@@ -61,8 +61,18 @@
     }
 }
 
-@media (min-width: 320px) and (max-width: 768px) {
-    .editoral-container {                
+@media all and (max-width: 768px) {
+    .editoral-container {
+        .headline-container {            
+            .latest-news{                
+                .info{
+                    padding: 10px 20px 20px 20px;                
+                    h1{
+                        font-size: 1.2em;
+                    }                  
+                }
+            }            
+        } 
         .list-container{
             flex-direction: column;
             .content{
